--- a/tcms_github_marketplace/templates/tcms_github_marketplace/subscription.html
+++ b/tcms_github_marketplace/templates/tcms_github_marketplace/subscription.html
@@ -1,11 +1,16 @@
 {% extends "base.html" %}
 {% load i18n %}
+{% load static %}
 {% load tcms_tenants %}
 {% load github_marketplace %}
+
+{% block head %}
+<link href="{% static 'prismjs/themes/prism.css' %}" rel="stylesheet" >
+{% endblock %}
+
 {% block title %}{% trans "Tenant subscriptions" %}{% endblock %}
 
 {% block contents %}
-
 <div class="container-fluid container-cards-pf">
     <div class="row row-cards-pf">
         <div class="col-xs-12 col-sm-12 col-md-3">
@@ -132,7 +137,7 @@
                                             <div class="list-view-pf-body">
                                                 <div class="list-view-pf-description">
                                                     <div class="list-group-item-text">
-                                                        <pre><code>{{ purchase.payload|pretty_json }}</code></pre>
+                                                        <pre><code class="language-json">{{ purchase.payload|pretty_json }}</code></pre>
                                                     </div>
                                                 </div>
                                             </div>
@@ -168,4 +173,7 @@ $(document).ready(function() {
     });
 });
 </script>
+
+<script src="{% static 'prismjs/prism.js' %}"></script>
+<script src="{% static 'prismjs/components/prism-json.min.js' %}"></script>
 {% endblock %}
