Show if user creating tenant is superuser

--- a/tcms_github_marketplace/templates/tcms_tenants/override_new.html
+++ b/tcms_github_marketplace/templates/tcms_tenants/override_new.html
@@ -17,6 +17,9 @@
         <label class="col-md-1 col-lg-1" for="id_name">{% trans "Owner" %}</label>
         <div class="col-sm-11 col-md-8 col-lg-5">
             <label>{{ request.user }}</label>
+            {% if request.user.is_superuser %}
+            <label>(superuser)</label>
+            {% endif %}
         </div>
     </div>
 {% endblock %}
