Show plan price in Billing UI

--- a/tcms_github_marketplace/templates/tcms_github_marketplace/subscription.html
+++ b/tcms_github_marketplace/templates/tcms_github_marketplace/subscription.html
@@ -61,7 +61,7 @@
                                         <div class="list-view-pf-additional-info">
                                             <div class="list-view-pf-additional-info-item">
                                                 <span class="fa fa-dollar" title="{% trans 'Price' %}"></span>
-                                                <strong title="{% trans 'Price' %}">32 / mo</strong>
+                                                <strong title="{% trans 'Price' %}">{{ subscription_price }} / {{ subscription_period }}</strong>
                                             </div>
 
                                             <div class="list-view-pf-additional-info-item">
