--- a/tcms_github_marketplace/templates/tcms_github_marketplace/subscription.html
+++ b/tcms_github_marketplace/templates/tcms_github_marketplace/subscription.html
@@ -29,6 +29,13 @@
                     <span class="pficon pficon-user"></span>{% trans 'Owner' %}:
                     <a href="{% url "tcms-profile" tenant.owner.username %}">{{ tenant.owner }}</a>
                 </h2>
+
+                {% if tenant.organization %}
+                <h2 class="card-pf-title" style="text-align: left">
+                    <span class="pficon pficon-users"></span>{% trans 'Organization' %}:
+                    {{ tenant.organization }}
+                </h2>
+                {% endif %}
             {% endfor %}
 
                 <div class="card-pf-body"></div>
@@ -55,6 +62,9 @@
                                         <div class="list-view-pf-description">
                                             <div class="list-group-item-text">
                                                 <a href="{% tenant_url request tenant.schema_name %}">{% tenant_url request tenant.schema_name %}</a>
+                                                {% if tenant.organization %}
+                                                    {% trans 'Organization' %}: {{ tenant.organization }}
+                                                {% endif %}
                                             </div>
                                         </div>
 
