--- a/tcms_github_marketplace/templates/tcms_tenants/override_new.html
+++ b/tcms_github_marketplace/templates/tcms_tenants/override_new.html
@@ -22,6 +22,17 @@
             {% endif %}
         </div>
     </div>
+
+    {{ form.organization }}
+
+    {% if form.organization.value %}
+    <div class="form-group">
+        <label class="col-md-1 col-lg-1" for="id_name">{% trans 'Organization' %}</label>
+        <div class="col-sm-11 col-md-8 col-lg-5">
+            <label>{{ form.organization.value }}</label>
+        </div>
+    </div>
+    {% endif %}
 {% endblock %}
 
 {% block contents %}
