Update subscription link via FastSpring
b/c GitHub Marketplace paid plans integration is not yet approved

--- a/tcms_github_marketplace/templates/tcms_github_marketplace/subscription.html
+++ b/tcms_github_marketplace/templates/tcms_github_marketplace/subscription.html
@@ -103,8 +103,8 @@
                         {% trans "You don't own any tenants" %}
                         </p>
                         <a class="btn btn-primary"
-                           href="https://github.com/marketplace/kiwi-tcms/">
-                            {% trans 'Buy with GitHub' %}
+                           href="https://mrsenko.onfastspring.com/kiwitcms-private-tenant">
+                            {% trans 'Subscribe via FastSpring' %}
                         </a>
 
                     {% endfor %}
