Remove newlines around source string
because this breaks gettext b/c Esperanto doesn't contain the
newline characters (it contains special mapping strings)

--- a/tcms_github_marketplace/templates/tcms_tenants/override_new.html
+++ b/tcms_github_marketplace/templates/tcms_tenants/override_new.html
@@ -46,14 +46,12 @@
 
                 <div>
                     <p>
-                    {% blocktrans %}
-You are about to create a Private Tenant for Kiwi TCMS.
+{% blocktrans %}You are about to create a Private Tenant for Kiwi TCMS.
 It will take a few minutes until your DB schema is ready!
 After clicking the 'Save' button <strong>do not</strong> close or refresh this page!<br>
 You will be redirected to your new tenant when the creation process is complete!
 If you see a 500 Internal Server Error page please contact
-<a href="mailto:kiwitcms@mrsenko.com">kiwitcms@mrsenko.com</a> immediately!
-                    {% endblocktrans %}
+<a href="mailto:kiwitcms@mrsenko.com">kiwitcms@mrsenko.com</a> immediately!{% endblocktrans %}
                     </p>
                 </div>
 
