--- a/tcms_github_marketplace/templates/tcms_tenants/override_new.html
+++ b/tcms_github_marketplace/templates/tcms_tenants/override_new.html
@@ -3,7 +3,7 @@
 
 {% block extra_contents %}
     <div class="form-group">
-        <label class="col-md-1 col-lg-1" for="id_name">{% trans "Paid until" %}</label>
+        <label class="col-md-1 col-lg-1">{% trans "Paid until" %}</label>
         <div class="col-sm-11 col-md-8 col-lg-5 {% if form.paid_until.errors %}has-error{% endif %}">
             <label>{{ form.paid_until.value }}</label>
             {{ form.paid_until }}
@@ -12,7 +12,7 @@
     </div>
 
     <div class="form-group">
-        <label class="col-md-1 col-lg-1" for="id_name">{% trans "Owner" %}</label>
+        <label class="col-md-1 col-lg-1">{% trans "Owner" %}</label>
         <div class="col-sm-11 col-md-8 col-lg-5">
             <label>{{ request.user }}</label>
             {% if request.user.is_superuser %}
@@ -25,7 +25,7 @@
 
     {% if form.organization.value %}
     <div class="form-group">
-        <label class="col-md-1 col-lg-1" for="id_name">{% trans 'Organization' %}</label>
+        <label class="col-md-1 col-lg-1">{% trans 'Organization' %}</label>
         <div class="col-sm-11 col-md-8 col-lg-5">
             <label>{{ form.organization.value }}</label>
         </div>
