Display Docker creds

--- a/tcms_github_marketplace/templates/tcms_github_marketplace/subscription.html
+++ b/tcms_github_marketplace/templates/tcms_github_marketplace/subscription.html
@@ -41,6 +41,28 @@
                 <div class="card-pf-body"></div>
             </div>
         </div>
+
+        <div class="col-xs-12 col-sm-12 col-md-6">
+            <div class="card-pf card-pf-accented card-pf-aggregate-status">
+                <h2 class="card-pf-title" style="text-align: left">
+                    {% trans 'Docker credentials' %}
+                </h2>
+
+                <div class="card-pf-body" style="text-align: left">
+                    <div class="input-group">
+                        <span class="input-group-addon">{% trans 'Username' %} </span>
+                        <input type="text" id="docker_username" value="{{ quay_io_account.username }}" class="form-control" disabled>
+                    </div>
+
+                    <div class="input-group">
+                        <span class="input-group-addon">{% trans 'Password' %}</span>
+                        <input type="password" id="docker_password" value="{{ quay_io_account.token }}" class="form-control" disabled>
+                        <span class="input-group-addon">{% trans 'Show' %}</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </div>
 
     <div class="row row-cards-pf">
