Add help-block pointing to instructions for private containers

--- a/tcms_github_marketplace/templates/tcms_github_marketplace/subscription.html
+++ b/tcms_github_marketplace/templates/tcms_github_marketplace/subscription.html
@@ -58,6 +58,13 @@
                         <span class="input-group-addon" style="cursor: pointer" id="show-docker-password">{% trans 'Password' %}</span>
                         <input type="password" id="docker_password" value="{{ quay_io_account.token }}" class="form-control" disabled>
                     </div>
+
+                    <p class="help-block">
+                        <span class="fa fa-exclamation-triangle" style="color: #ec7a08;"></span>
+                        <span class="fa fa-sign-in" aria-hidden="true"></span>
+                        {% trans 'Private containers instructions' %}:
+                        <a href="https://kiwitcms.org/containers/">https://kiwitcms.org/containers/</a>
+                    </p>
                 </div>
             </div>
         </div>
