--- a/tcms_github_marketplace/templates/tcms_github_marketplace/subscription.html
+++ b/tcms_github_marketplace/templates/tcms_github_marketplace/subscription.html
@@ -65,6 +65,44 @@
             </div>
         </div>
 
+        <div class="col-xs-12 col-sm-12 col-md-6">
+            <div class="card-pf card-pf-accented card-pf-aggregate-status">
+                <h2 class="card-pf-title kiwi-text-align-left">
+                    {% trans 'kiwitcms/gitops prefix' %}
+                </h2>
+
+                <div class="card-pf-body kiwi-text-align-left">
+                    <form class="form-horizontal" method="post" action="#">
+                        {% csrf_token %}
+
+                        <div class="form-group">
+                            <div class="col-xs-10 col-sm-10 col-md-10 col-lg-10 {% if form.gitops_prefix.errors %}has-error{% endif %} kiwi-padding-right-0">
+                                <input type="text" name="gitops_prefix"
+                                    value="{{ form.gitops_prefix.value|default:'' }}"
+                                    class="form-control" required
+                                    {% if form.gitops_prefix.value %}disabled{% endif %}
+                                    maxlength="{{ form.fields.gitops_prefix.max_length }}"
+                                    placeholder="https://github.com/your-account-or-organization"
+                                >
+
+                                {{ form.gitops_prefix.errors }}
+                            </div>
+
+                            <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1 kiwi-padding-left-0">
+                                <button type="submit" class="btn btn-default btn-md">{% trans "Save" %}</button>
+                            </div>
+                        </div>
+
+                        <p class="help-block">
+                            <span class="fa fa-exclamation-triangle kiwi-color-warning"></span>
+                            <span class="fa fa-sign-in" aria-hidden="true"></span>
+                            <a href="https://kiwitcms.org/gitops/">https://kiwitcms.org/gitops/</a>
+                        </p>
+                    </form>
+                </div>
+            </div>
+        </div>
+
     </div>
 
     <div class="row row-cards-pf">
