--- a/tcms_github_marketplace/templates/tcms_tenants/override_edit.html
+++ b/tcms_github_marketplace/templates/tcms_tenants/override_edit.html
@@ -1,4 +1,12 @@
 {% extends "tcms_tenants/new.html" %}
+
+{% comment %}
+Copyright (c) 2024 Alexander Todorov <atodorov@otb.bg>
+
+Licensed under GNU Affero General Public License v3 or later (AGPLv3+)
+https://www.gnu.org/licenses/agpl-3.0.html
+{% endcomment %}
+
 {% load i18n %}
 
 {% block extra_contents %}
