Update argument to tcms-profile URL, changed in v14.3
see:
https://github.com/kiwitcms/Kiwi/commit/1e04bb18298e27604d55dfd31858b758862faa41
`

--- a/tcms_github_marketplace/templates/tcms_github_marketplace/subscription.html
+++ b/tcms_github_marketplace/templates/tcms_github_marketplace/subscription.html
@@ -31,7 +31,7 @@ https://www.gnu.org/licenses/agpl-3.0.html
 
                 <h2 class="card-pf-title kiwi-text-align-left">
                     <span class="pficon pficon-user"></span>{% trans 'Owner' %}:
-                    <a href="{% url "tcms-profile" tenant.owner.username %}">{{ tenant.owner }}</a>
+                    <a href="{% url "tcms-profile" tenant.owner.pk %}">{{ tenant.owner }}</a>
                 </h2>
 
                 {% if tenant.organization %}
