Update help text for docker credentials

--- a/tcms_github_marketplace/templates/tcms_github_marketplace/subscription.html
+++ b/tcms_github_marketplace/templates/tcms_github_marketplace/subscription.html
@@ -49,7 +49,7 @@ https://www.gnu.org/licenses/agpl-3.0.html
         <div class="col-xs-12 col-sm-12 col-md-6">
             <div class="card-pf card-pf-accented card-pf-aggregate-status">
                 <h2 class="card-pf-title kiwi-text-align-left">
-                    {% trans 'Docker credentials' %}
+                    {% trans 'Private repository credentials' %}
                 </h2>
 
                 <div class="card-pf-body kiwi-text-align-left">
@@ -65,6 +65,7 @@ https://www.gnu.org/licenses/agpl-3.0.html
 
                     <p class="help-block">
                         <span class="fa fa-exclamation-triangle kiwi-color-warning"></span>
+                        {% trans "Click 'Password' to reveal!" %}:
                         <span class="fa fa-sign-in" aria-hidden="true"></span>
                         {% trans 'Private containers instructions' %}:
                         <a href="https://kiwitcms.org/containers/">https://kiwitcms.org/containers/</a>
