--- a/tcms_github_marketplace/templates/tcms_github_marketplace/subscription.html
+++ b/tcms_github_marketplace/templates/tcms_github_marketplace/subscription.html
@@ -65,7 +65,7 @@ https://www.gnu.org/licenses/agpl-3.0.html
 
                     <p class="help-block">
                         <span class="fa fa-exclamation-triangle kiwi-color-warning"></span>
-                        {% trans "Click 'Password' to reveal!" %}:
+                        {% trans "Click 'Password' to reveal!" %}
                         <span class="fa fa-sign-in" aria-hidden="true"></span>
                         {% trans 'Private containers instructions' %}:
                         <a href="https://kiwitcms.org/containers/">https://kiwitcms.org/containers/</a>
